remove payout